stylesheets/style.css
html {
    margin: 0 auto;
}

body {
    overflow: hidden;
}

#gameContainer {
    height: 90vh; /* 90% of parent's height */
    width: 90vh; /* sets width to the same as height, so a 1:1 aspect ratio */
    margin-bottom: 20px;
}

#gameSVG {
    height: 90vh;
    width: 90vh;
	
	/* centering */
	position: absolute;
  	left: 50%;
	transform: translateX(-50%);
  	-webkit-transform: translateX(-50%);
	
	border-radius: 5px;
}

#gameSVG .gameSVG_subGame-square {
	fill: #CCC;
}

.gameSVG_subGame:hover .gameSVG_subGame-square {
	fill: #000;
}

#gameSVG .gameSVG_inner-border {
	stroke: #000;
	stroke-width: 9;
}

#gameSVG .gameSVG_outer-border {
	stroke: #000;
	stroke-width: 25;
}

#gameSVG .gameSVG_subGame_inner-border {
	stroke: #000;
	stroke-width: 3;
}

@media only screen and (max-width: 95vh) /* when width is roughly less than height */ {
    
    #gameSVG {
        height: 94vw;
        width: 94vw;
    }
}

